flag as alpha, delete undefined stuff

--- a/app/views/papers/index_api.html
+++ b/app/views/papers/index_api.html
@@ -1,5 +1,5 @@
-<h1 id="about-the-rich-citations-api">About the Rich Citations API</h1>
-<p>Rich Citations is a PLOS Labs project adding metadata to citation data in scientific articles and stores this information in a centralized database. This API allows you to access and scrape the Rich Citations database.</p>
+<h1 id="about-the-rich-citations-api-alpha">About the Rich Citations API Alpha</h1>
+<p>Rich Citations is a PLOS Labs project adding metadata to citation data in scientific articles and stores this information in a centralized database. This alpha API allows you to access and scrape the Rich Citations database.</p>
 <h2 id="terminology">Terminology</h2>
 <p>For the definitions below, assume that you are reading a paper A, that contains in-text citations and references to other papers, including paper B.</p>
 <ul>
@@ -19,13 +19,11 @@
 <li>PubMed: <code>http://identifiers.org/pubmed/16381840</code></li>
 <li>PubMed Commons (PMC): <code>http://identifiers.org/pmc/PMC3531190</code></li>
 <li>arxiv ID: <code>http://arxiv.org/abs/1407.4120</code></li>
-<li>NIHMS ID: ?</li>
 <li>github repo name/commit id:
 <ul>
 <li><code>http://github.com/foo/bar</code></li>
 <li><code>http://github.com/foo/bar/commit/f6f5500ac3d25ea379bc0e326ef69e05de11714f</code></li>
 </ul></li>
-<li>URL + Date: ?</li>
 <li>URL: <code>http://example.org/</code></li>
 </ul></li>
 </ul>
