--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,7 +46,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href='/') Citation-Tools
+          %a.brand(href='/') Rich Citations
           .container.nav-collapse
             %ul.nav
               %li= link_to 'Search', search_path
