--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -63,7 +63,7 @@
     
       %footer
         %p
-          &copy; PLOS Labs, 2014.
+          &copy; PLOS, 2014.
           %br
           All data available under a
           <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 license.</a>
