change `text` -> `original_citation` in API docs

--- a/app/views/papers/index_api.html
+++ b/app/views/papers/index_api.html
@@ -45,7 +45,7 @@
     &quot;cited_id&quot;: &quot;http://dx.doi.org/10.1234/1&quot;,
     &quot;index&quot;: 1,
     &quot;self_citation&quot;: false,
-    &quot;text&quot;: &quot;Doe J. (2000) Morbi vitae lorem blandit. Duis in lorem interdum. 14: 11–18.&quot;,
+    &quot;original_citation&quot;: &quot;Doe J. (2000) Morbi vitae lorem blandit. Duis in lorem interdum. 14: 11–18.&quot;,
     &quot;bibliographic&quot;: { … },
     &quot;citation_groups&quot;: [ … ]
 }</code></pre>
@@ -109,7 +109,7 @@
             &quot;cited_id&quot;: &quot;http://dx.doi.org/10.1234/1&quot;,
             &quot;index&quot;: 1,
             &quot;self_citation&quot;: false,
-            &quot;text&quot;: &quot;Doe J. (2000) Morbi vitae lorem blandit. Duis in lorem interdum. 14: 11–18.&quot;,
+            &quot;original_citation&quot;: &quot;Doe J. (2000) Morbi vitae lorem blandit. Duis in lorem interdum. 14: 11–18.&quot;,
             &quot;bibliographic&quot;: { … },
             &quot;citation_groups&quot;: [ (see below) ],
         },
@@ -119,7 +119,7 @@
             &quot;cited_id&quot;: &quot;http://dx.doi.org/10.1234/1&quot;,
             &quot;index&quot;: 1,
             &quot;self_citation&quot;: false,
-            &quot;text&quot;: &quot;Roe J. (2000) Maecenas imperdiet leo ut bibendum auctor. Vivamus mollis. 88: 1012–22.&quot;,
+            &quot;original_citation&quot;: &quot;Roe J. (2000) Maecenas imperdiet leo ut bibendum auctor. Vivamus mollis. 88: 1012–22.&quot;,
             &quot;bibliographic&quot;: { … },
             &quot;citation_groups&quot;: [ (see below) ],
         }
