note that API only works with PLOS papers for now

--- a/app/views/papers/index_api.html
+++ b/app/views/papers/index_api.html
@@ -28,6 +28,7 @@
 </ul></li>
 </ul>
 <h2 id="getting-the-reference-information-for-a-paper">Getting the reference information for a paper</h2>
+<p>For the moment, this will only work with PLOS papers.</p>
 <pre><code>GET http://api.richcitations.org/v0/paper?id=http%3A%2F%2Fdx.doi.org%2F10.1371%2Fjournal.pone.0000000</code></pre>
 <p>This returns JSON describing the paper and its references:</p>
 <pre><code>{
