comment out broken climate change paper

--- a/app/views/papers/index.html.haml
+++ b/app/views/papers/index.html.haml
@@ -27,7 +27,7 @@
 %h3 Examples
 
 %ul
-  %li= link_to('Hansen J, Kharecha P, Sato M, Masson-Delmotte V, Ackerman F, et al. (2013) Assessing “Dangerous Climate Change”: Required Reduction of Carbon Emissions to Protect Young People, Future Generations and Nature. PLoS ONE 8(12): e81648.', '/view/10.1371/journal.pone.0081648')
+  -#  %li= link_to('Hansen J, Kharecha P, Sato M, Masson-Delmotte V, Ackerman F, et al. (2013) Assessing “Dangerous Climate Change”: Required Reduction of Carbon Emissions to Protect Young People, Future Generations and Nature. PLoS ONE 8(12): e81648.', '/view/10.1371/journal.pone.0081648')
   %li= link_to('Harris CR, Prouvost C (2014) Jealousy in Dogs. PLoS ONE 9(7): e94597.', '/view/10.1371/journal.pone.0094597')
   %li= link_to('Norris RD, Norris JM, Lorenz RD, Ray J, Jackson B (2014) Sliding Rocks on Racetrack Playa, Death Valley National Park: First Observation of Rocks in Motion. PLoS ONE 9(8): e105948.', '/view/10.1371/journal.pone.0105948')
   %li= link_to('Sojo V, Pomiankowski A, Lane N (2014) A Bioenergetic Basis for Membrane Divergence in Archaea and Bacteria. PLoS Biol 12(8): e1001926.', '/view/10.1371/journal.pbio.1001926')
