--- a/app/views/papers/interstitial.html.haml
+++ b/app/views/papers/interstitial.html.haml
@@ -8,7 +8,7 @@
   
 %h3 Destination
 %p
-  = render partial: "cite", object: @ref[:bibliographic], locals: {cite_href: "http://dx.doi.org/#{URI.encode_www_form_component(@ref[:bibliographic][:DOI])}"}
+  = render partial: "cite", object: @ref[:bibliographic], locals: {cite_href: @ref[:uri] }
 
 %p
   Redirecting ...
